--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <img class="logos" src="img/logo_flipped.png" alt="">
         </div>
         <!-- The graphics box starts empty. It's populated with JS later -->
-        <div id="graphicsBox"></div>
+        <div id="graphicsBox">
+        
+        </div>
         <!-- Bars box is filled later, too -->
         <div id="barsBox"></div>
         <!-- Control will change depending on game state, as well -->
